--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <section id="email">
             <h2>Get early access today</h2>
             <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any <br> questions, our suppport team will be happy to help you.</p>
-            <input type="email" name="email" placeholder="email@example.com" id="email-input">
-            <button>Get Started For Free</button>
+            <input type="email" name="email" placeholder="email@example.com" id="email-input" required>
+            <button id="free">Get Started For Free</button>
         </section>
     </main>
     <footer>
@@ -100,7 +100,7 @@
                 <img src="images/icon-phone.svg" alt="phone" id="footer-phone">
                 <p>+234-55-44-22-77</p>
                 <img src="images/icon-email.svg" alt="email" id="footer-email">
-                <p>example@fylo.com</p>
+                <p>exam@fylo.com</p>
             </div>
             <div>
                 <p>About Us</p>
