Remove inline CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <img src="images/logo.svg" alt="logo" id="logo">
         <nav>
-            <a href="http://" class="navlink">Features</a>
-            <a href="http://" class="navlink">Team</a>
-            <a href="http://" class="navlink">Sign In</a>
+            <a href="#" class="navlink">Features</a>
+            <a href="#" class="navlink">Team</a>
+            <a href="#" class="navlink">Sign In</a>
         </nav>
     </header>
     <main>
@@ -114,9 +114,9 @@
                 <p>Privacy</p>
             </div>
             <div>
-                <img src="images/logo-facebook.svg" alt="" width="20px">
-                <img src="images/logo-twitter.svg" alt="" width="20px">
-                <img src="images/logo-instagram.svg" alt="" width="20px">
+                <img src="images/logo-facebook.svg" alt="logo" class="img-width">
+                <img src="images/logo-twitter.svg" alt="logo" class="img-width">
+                <img src="images/logo-instagram.svg" alt="logo" class="img-width">
             </div>
         </div>
     </footer>
