--- a/index.html
+++ b/index.html
@@ -55,30 +55,32 @@
                 <a href="" id="fylo">See how Fylo works <img src="images/icon-arrow.svg" alt=""></a>
             </div>
         </section>
-        <img src="images/bg-quotes.png" alt="" id="quotes">
-        <section id = "testimonials">
-            <div class="profiles">
-                <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-                <img src="images/profile-1.jpg" alt="" class="profile-img">
-                <div class="figure">
-                    <h4>Satish Patel</h4>
-                    <p>Founder & CEO, Huddle</p>
+        <section>
+            <img src="images/bg-quotes.png" alt="" id="quotes">
+            <div  id = "testimonials">
+                <div class="profiles">
+                    <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+                    <img src="images/profile-1.jpg" alt="" class="profile-img">
+                    <div class="figure">
+                        <h4>Satish Patel</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
                 </div>
-            </div>
-            <div class="profiles">
-                <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-                <img src="images/profile-2.jpg" alt="" class="profile-img">
-                <div class="figure"> 
-                    <h4>Bruce McKenzie</h4>
-                    <p>Founder & CEO, Huddle</p>
+                <div class="profiles">
+                    <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+                    <img src="images/profile-2.jpg" alt="" class="profile-img">
+                    <div class="figure"> 
+                        <h4>Bruce McKenzie</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
                 </div>
-            </div>
-            <div class="profiles">
-                <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
-                <img src="images/profile-3.jpg" alt="" class="profile-img">
-                <div class="figure">
-                    <h4>Iva Boyd</h4>
-                    <p>Founder & CEO, Huddle</p>
+                <div class="profiles">
+                    <p>Fylo has improved our team productivity by <br> an order of magnitude. Since making the <br> switch our team has become a well-oiled <br> collaboration machine.</p>
+                    <img src="images/profile-3.jpg" alt="" class="profile-img">
+                    <div class="figure">
+                        <h4>Iva Boyd</h4>
+                        <p>Founder & CEO, Huddle</p>
+                    </div>
                 </div>
             </div>
         </section>
